--- a/src/Pages/Landingpage.css
+++ b/src/Pages/Landingpage.css
@@ -22,6 +22,7 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  color: white;
 }
 .content h1 {
   font-size: 45px;
@@ -51,4 +52,14 @@ button{
 }
 button:hover{
     background-color: rgb(161, 28, 28);
+}
+
+@media screen and (max-width: 700px){
+    .content{
+        padding: 200px;
+    }
+    button{
+        margin-top: 10px;
+    }
+   
 }
