--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,24 +1,39 @@
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  /* padding: 20px; */
+  display: flex;
+  /* justify-content: space-evenly; */
+  background: transparent;
+  background-color: rgba(8, 6, 6, 0.959);
+}
 
-
-.navbar{
-    position: fixed;
-    top:0;
-    width: 100%;
-    height: 30px;
-    padding: 20px;
+.logo {
+  /* position: fixed; */
+  /* left: 30px; */
+  width: 80px;
+}
+.avatar {
+  /* position: fixed; */
+  /* right: 30px; */
+  width: 30px;
+}
+#navlogin {
+  width: 75px;
+  background-color: rgb(172, 24, 24);
+  border-radius: 3px;
+  text-align: center;
+  color: rgb(247, 244, 244);
+  font-size: 17px;
+  font-weight: bold;
+  height: 30px;
+  
+  /* position: fixed; */
+  /* right: 60px; */
+}
+.logavatar{
     display: flex;
-
-    justify-content: space-between;
-    background: transparent;
-}
-
-.logo{
-    position: fixed;
-    left: 20px;
-    width: 80px;
-}
-.avatar{
-    position: fixed;
-    right: 20px;
-    width:30px ;
+    gap: 15px;
 }
