--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
 body{
   box-sizing: border-box;
   font-family: sans-serif;
-  background-color: #111;
-  overflow: hidden;
+  background-color:black;
+  overflow-x: hidden;
 }
