--- a/src/Components/RowPost/RowPost.css
+++ b/src/Components/RowPost/RowPost.css
@@ -26,10 +26,14 @@
     cursor: pointer;
     
 }
+.posters img{
+    transition: all 0.6s ease-in-out ; 
+
+}
 .posters img:hover{
     transform: scale(1.1);
-    
 }
 #rowtitle{
-    color: black
+    color: white;
+    padding: 8px;
 }
